web-infras/parser/tests/fixtures/babel/es2022/class-properties/new-target-invalid/output.txt
[SyntaxError]: `new.target` can only be used in functions or class properties. (1,9)
1|var x = new.target;
 |       ^
